tests/reference/asr-string_02-499c9ff.stderr
semantic error: str.join() takes type list only
 --> tests/errors/string_02.py:6:15
  |
6 |     res:str = x.join(p)
  |               ^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
